--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -2,3 +2,9 @@ theme: osuny-hugo-theme-aaa
 paginate: 18
 enableRobotsTXT: true
 removePathAccents: true
+
+params:
+  breadcrumb:
+    position: after-hero
+  summary:
+    position: hero
